frontend/test/typecheck/success/unop.fc
void foo() {
    int i = 0;
    i = -i;
    bool b = false;
    b = !b;
}
