frontend/test/typecheck/error/negate-bool.fc
extern void sink(...);

int foo() {
    sink(-true);
}
